# skill-docket-app

./: .gitignore  CLAUDE.md  justfile  test-roadmap.md
core/: Cargo.toml
core/src/: client.rs  command.rs  daemon.rs  help.rs  install.rs  lib.rs  service.rs  sys.rs
core/src/agent/: bridge.rs  briefing.rs  conversation_log.rs  copilot_sync.rs  lifecycle.rs  messenger.rs  mod.rs  pool.rs  spawner.rs  state.rs  watcher.rs
core/src/cli/: mod.rs  parse.rs
core/src/convergence/: executor.rs  mod.rs  planner.rs  retry.rs
core/src/data/: agent.rs  config_doc.rs  folders.rs  learnings.rs  merge.rs  messages.rs  mod.rs  project_config.rs  roadmap.rs  scanner.rs  settings.rs  task_tree.rs
core/src/diagnosis/: events.rs  mod.rs  reliability.rs  report.rs  thresholds.rs
core/src/execution/: engine.rs  mod.rs  output.rs  pipeline.rs  sandbox.rs  scheduler.rs  timeline.rs
core/src/history/: browse.rs  mod.rs  retention.rs  snapshot.rs
core/src/infrastructure/: mock.rs  mod.rs  runner.rs  tmux.rs
core/src/monitor/: cycle.rs  health.rs  heartbeat.rs  mod.rs
core/src/namespace/: agent_state.rs  flush.rs  mod.rs  path.rs  store.rs
core/src/rig/: config.rs  connection.rs  mod.rs  orchestrator.rs  remote.rs  sync.rs  worker.rs
core/src/rules/: bridge.rs  engine.rs  expr.rs  (+2 more)
python/: pyproject.toml
python/cmx/: __init__.py  client.py  decorators.py  protocol.py  watch.py
python/tests/: test_client.py  test_decorators.py  test_entity.py  test_frontmatter.py  test_kv.py  test_merge.py  test_protocol.py  test_status.py  test_trigger.py  test_types.py  test_watch.py
(+66 files in other folders)
